# btl

./: README.md  app.py  parsing.py  pyproject.toml
data/: RR2602.btl
tests/: test_btl_parser.py
