[project]
name = "btl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
